@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-19T08:08:27Z",
+  "timestamp" : "2022-11-21T00:37:59Z",
   "count_outdated" : 72,
   "uniques_outdated" : 34,
-  "count" : 76,
-  "uniques" : 38,
+  "count" : 77,
+  "uniques" : 39,
   "views" : [
     {
       "timestamp": "2022-11-07T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-11-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
