@@ -1,3 +1,11 @@
+2022-11-21T00:37:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3510500003 # 632
+* notice: last 14d: unq all: 5 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 34 72 / 38 76
+* notice: next accum: outdated-unq outdated-all / unq all: 34 72 / 39 77
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-20]
+
 2022-11-19T08:08:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3502697959 # 627
 * notice: last 14d: unq all: 4 4
